--- a/app/src/main/res/layout/authorization_fragment.xml
+++ b/app/src/main/res/layout/authorization_fragment.xml
@@ -10,7 +10,7 @@
         android:layout_height="51dp"
         android:layout_marginTop="356dp"
         android:ems="10"
-        android:hint="pass"
+        android:hint="Пароль"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="290dp"
         android:ems="10"
-        android:hint="login"
+        android:hint="Логин"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +32,7 @@
         android:layout_width="151dp"
         android:layout_height="55dp"
         android:layout_marginTop="450dp"
-        android:text="signin"
+        android:text="Войти"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="600dp"
-        android:text="signup"
+        android:text="Зарегистрироваться"
         android:textColor="#000000"
         android:textColorLink="#E4E4E4"
         app:backgroundTint="#FFFFFF"
